--- a/assets/styles/elements/_SortingMenu.scss
+++ b/assets/styles/elements/_SortingMenu.scss
@@ -45,10 +45,5 @@
 		width: 100%;
 		left: 50%;
 		transform: translateX(-50%);
-
-		&::before {
-			left: auto;
-			right: 1em;
-		}
 	}
 }
